--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,4 +25,4 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
-} 
+}
