--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.2.10"
+    "react-hook-form": "^7.61.1",
+    "react-input-mask": "^2.0.4",
+    "swiper": "^11.2.10",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
