--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@types/aos": "^3.0.7",
+    "airtable": "^0.12.2",
     "aos": "^2.3.4",
     "next": "14.0.4",
     "react": "^18",
